--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "azure-blob-storage-mcp-server"
 version = "0.1.0"
 description = "An MCP Server to interact with Azure Blob Storage Clients and Resources"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 authors = [
     {name = "Harvey Marshall", email = "your-email@example.com"}
 ]
@@ -18,7 +18,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -28,6 +27,7 @@ dependencies = [
     "azure-identity>=1.23.0",
     "azure-storage-blob>=12.25.1",
     "mcp>=1.10.1",
+    "pytest",
 ]
 
 [project.urls]
